--- a/Toeic_app_jquery.html
+++ b/Toeic_app_jquery.html
@@ -372,7 +372,7 @@ $(function(){
 <body>
 
 <h1> 會先顯示英文，兩秒後再跳出中文 </h1>
-<h1><strong><em>請先設定複習範圍</em></strong></h1>
+<h1 id="UIRange"><strong><em>請先設定複習範圍</em></strong></h1>
 <table style = "font-size:25px;" width = "600"  height= "600" border="1">
 　<tr >
 　	<td width = "200"  height= "200" align="center">英文</td>
