--- a/Toeic_app_jquery.html
+++ b/Toeic_app_jquery.html
@@ -36,9 +36,10 @@ $(function(){
 	var NumRange = 0;    // USER Choose Word Range 
 	var WordMode = 0;	 // toeic820 or 389
 	var WordModeFlag=0;  // only set once
-	var  responsiveVoiceCN = new ResponsiveVoice();    //TTS
-	var  responsiveVoiceEN = new ResponsiveVoice();		
+	var responsiveVoiceCN = new ResponsiveVoice();    //TTS
+	var responsiveVoiceEN = new ResponsiveVoice();		
 	
+	var Timer_SpeedSecond = 0;
 	// Variable
 	
 	
@@ -270,8 +271,9 @@ $(function(){
 		msg.onend = function(e) {
 		console.log('Finished in ' + event.elapsedTime + ' seconds.');
 		};
-
+		
 		speechSynthesis.speak(msg);
+
 	});
 	
 	
@@ -308,8 +310,8 @@ $(function(){
 	
 	 $("#cn").html(" ");
 	 
-	 Change_rate =  Math.floor((Math.random() * 5)+1);
-	 
+	 //Change_rate =  Math.floor((Math.random() * 5)+1);
+	 Change_rate = 1;
 	 console.log(Change_rate);
 	 
      if(Start_Num+Change_rate<NumRange)	 
@@ -321,6 +323,7 @@ $(function(){
 	 else
 	 {
 	    Start_Num=Math.floor((Math.random() * NumRange));
+	    Random_Word();	
 		$("#eng").html(DataInRange[Start_Num][0]);
 		
 	 }
@@ -336,7 +339,7 @@ $(function(){
     
 		words.voice = speechSynthesis.getVoices().filter(function(voice) { return voice.name == 'Google US English'; })[0];
   
-		words.rate = 0.8; // 0.1 to 10
+		words.rate = 1; // 0.1 to 10
 　 　	speechSynthesis.speak(words);	
 			
 		}
@@ -356,6 +359,22 @@ $(function(){
 		}
 	}
 	 
+	 function Random_Word()
+	 {
+	 	for( i = 0 ; i<NumRange/2; i++)
+	 	{
+	 	
+	 		r1=Math.floor((Math.random() * NumRange));
+	 		r2=Math.floor((Math.random() * NumRange));
+	 		temp = DataInRange[r1];
+	 		DataInRange[r1]=DataInRange[r2];
+	 		DataInRange[r2]=temp;
+	 	}
+
+	 	alert(NumRange);
+
+
+	 }
 	 
 
 });
