add Register function

--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
   </hgroup>
 
   <nav>
- 	<a href="">註冊會員</a>
+ 	<a href="http://127.0.0.1/Toeic/Toeicgit/Register.php">註冊會員</a>
  	<a href="">登入會員</a>
 
   </nav>
