--- a/Toeic_app_jquery.html
+++ b/Toeic_app_jquery.html
@@ -399,7 +399,7 @@ $(function(){
 <div id="MainPart">
 <input type="button" id="ToTranslater" value="跳轉至翻譯">
 <div id ="Div_Tittle">
-<h1> 會先顯示英文，兩秒後再跳出中文 </h1>
+<header>會先顯示英文，兩秒後再跳出中文</header>
 <h1 id="UIRange"><strong><em>請先設定複習範圍</em></strong></h1>
 </div>
 <table style = "font-size:25px;" width = "600"  height= "600" border="1">
