--- a/Index.html
+++ b/Index.html
@@ -6,23 +6,28 @@
 	<style>
 	body {background-color: #EBE2DA; margin: 0 auto;}
 	</style>
+  <script type="text/javascript">
+    
+    
+
+  </script>
 </head>
 <body>
  <style type="text/css">
  	header { padding : 5px 5px 30px 5px; border: 3px solid #FFFFFF }
 	header>hgroup>h2 {color : #666600;}
 	header>nav{float:right; margin :10px;}
+  header>hgroup>h2>span{margin:  40%;}
  </style>
  <header>
   <hgroup>
-   <h2>Joy的測試網站</h2>
+   <h2>Joy的測試網站<span id = "user"></span></h2>
    <h4>拿來做一些測試和練習用</h3>
   </hgroup>
 
   <nav>
  	<a href="http://127.0.0.1/Toeic/Toeicgit/Register.php">註冊會員</a>
- 	<a href="">登入會員</a>
-
+ 	<a href="http://127.0.0.1/Toeic/Toeicgit/Login.html">登入會員</a>
   </nav>
  </header>
 
