--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@
    	<nav><a href="http://127.0.0.1/Toeic/Toeicgit/Toeic_app_jquery.html">Toeic練習</a></nav>
    	<nav>最新文章</nav>
    	 <ul>
-      <li><a href="#">文章1</a></li>
+      <li><a href="http://127.0.0.1/Toeic/Toeicgit/Googlemap.html">Googlemap</a></li>
       <li><a href="#">文章2</a></li>
       <li><a href="#">文章3</a></li>
       <li><a href="#">文章4</a></li>
