--- a/Translate.html
+++ b/Translate.html
@@ -61,7 +61,15 @@
               });
 
 
+              $("#Return").click(function(){
+
+              window.location = 'http://127.0.0.1/Toeic/Toeicgit/';
+
+              });
+
        });
+
+
 	</script>
 
 	<style type="text/css">
@@ -72,6 +80,7 @@
 <body>
 <div>
 <input type="button" value="Toeic練習" id="btnToToeic">
+<input type="button" id="Return" value="回首頁" >
 </div>
 <div >
 <h1 id ="Title">請輸入翻譯</h1>
